[tool.poetry]
name = "f710_controller"
version = "0.1.1"
description = ""
authors = ["riku-kimura-kccs <riku-kimura@kccs.co.jp>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
f710_controller = 'controller_for_pix_unit2:main'


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
